==================== 2.25.3 ====================

2008-12-16  Bastien Nocera  <hadess@hadess.net>

	* panel-menu-items.c (panel_place_menu_item_create_menu): Remove
	nautilus-cd-burner from the Places menu, it's now in the System Tools
	instead (Closes: #508385)

2008-12-11  Vincent Untz  <vuntz@gnome.org>

	* libpanel-util/panel-show.c: (panel_show_help): plug leak

2008-12-11  Vincent Untz  <vuntz@gnome.org>

	Stop using gnome_util_user_shell(). This not needed, unless we want to
	have the aliases defined in a shell work in the run dialog. I'm nearly
	sure no other "run dialog"-type programs do this anyway, and it's
	really not a command line from the shell (redirecting output doesn't
	work, eg).
	And some much needed cleanups.

	* panel-run-dialog.c: (command_is_executable): don't accept URI, and
	return the stuff that g_shell_parse_argv() gives us so we don't have
	to call it twice
	(panel_run_dialog_launch_command): no gnome_util_user_shell() anymore,
	and minor updates
	(panel_run_dialog_execute): remove some useless stuff, don't assume we
	can run a program over http, do not accept applications if they're
	started by URI (file:///) -- it doesn't really make sense anyway; stop
	mixing the strings with the disk encoding and utf-8
	(panel_run_dialog_create_desktop_file): ditto (more or less), and make
	consistent

2008-12-10  Vincent Untz  <vuntz@gnome.org>

	* panel-action-button.c: remove FIXME

2008-12-10  Vincent Untz  <vuntz@gnome.org>

	Stop using GnomeHelp, and use gtk_show_uri() for displaying help.

	* panel-util.[ch]: (panel_show_help): kill
	* libpanel-util/panel-show.[ch]: (_panel_show_error_dialog): use
	g_markup_printf_escaped()
	(panel_show_uri):
	(panel_show_uri_force_mime_type): fix a check
	(_panel_show_help_error_dialog), (_panel_show_help_handle_error),
	(panel_show_help): new, they all do what their name imply

	* applet.c: (applet_callback_callback):
	* panel-action-button.c: (panel_action_button_invoke_menu):